--- a/include/views/default/crunchbutton/frontend/location.phtml
+++ b/include/views/default/crunchbutton/frontend/location.phtml
@@ -78,8 +78,7 @@
 
 	<div class="main-content-readable content-item-locations">
 		<div class="home-welcome">
-			<h1>Our most popular cities</h1>
-			<h2>Take a look at some of the best delivery food in these cities.</h2>
+			<h1>Our most popular locations</h1>
 			<div class="content-item-locations-cities">
 				<span ng-repeat="alias in topCommunities">
 					<span class="content-item-locations-city" ng-click="openCity(alias.alias)" permalink="{{alias.alias}}">{{alias.name}}</span>
