--- a/include/views/default/cockpit2/frontend/orders/orders-list.phtml
+++ b/include/views/default/cockpit2/frontend/orders/orders-list.phtml
@@ -1,7 +1,7 @@
 <div class="top-pad"></div>
 
 <div class="content-padding">
-	<h1 class="subltitle "><i class="fa fa-car"></i>&nbsp;&nbsp;<span>Orders</span></h1>
+	<h1 class="subltitle "><i class="fa fa-car"></i>&nbsp;&nbsp;<span>Orders</span><div class="title-loader" ng-if="loading"><i class="fa fa-refresh fa-spin"></i></div></h1>
 	<div class="box-content2 box-content-table">
 		<table>
 			<tr>
@@ -32,7 +32,7 @@
 				<th>Status</th>
 			</tr>
 			<tr ng-repeat="order in orders">
-				<td><a href="/order/{{order.id_order}}">#{{order.id_order}}</td>
+				<td><a href="/order/{{order.id_order}}">{{order.id_order}}</td>
 				<td>{{order.date | localtime | timestamp | date:'MM/dd @ HH:mm'}}</td>
 				<td>
 					<a href="/restaurant/{{order.id_restaurant}}">{{order._restaurant_name}}</a><br>
