--- a/include/views/default/cockpit2/frontend/tickets/tickets-view.phtml
+++ b/include/views/default/cockpit2/frontend/tickets/tickets-view.phtml
@@ -8,14 +8,14 @@
 	<div class="box-content2 box-content-table">
 		<table class="tb-zebra">
 			<tr>
-				<th>Support&nbsp;ID</th>
+				<th>ID</th>
 				<th>From</th>
 				<th>Updated</th>
 				<th>Name</th>
 				<th>Message</th>
 			</tr>
 			<tr ng-repeat="ticket in tickets">
-				<td><a href="/ticket/{{ticket.id_support}}">#{{ticket.id_support}}</td>
+				<td><a href="/ticket/{{ticket.id_support}}">{{ticket.id_support}}</td>
 				<td><a href ng-click="callText(ticket.user.phone)">{{ticket.user.phone | formatPhone}}</a></td>
 				<td>
 					<span ng-if="ticket.timestamp" am-time-ago="ticket.timestamp*1000"></span>
@@ -28,11 +28,11 @@
 		</table>
 	</div>
 	
-	<h1 class="subltitle"><i class="fa fa-phone"></i>&nbsp;&nbsp;<span>Calls</span>&nbsp;&nbsp;<div class="title-loader" ng-if="!calls"><i class="fa fa-refresh fa-spin"></i></div></h1>
+	<h1 class="subltitle"><i class="fa fa-phone"></i>&nbsp;&nbsp;<span>Calls</span><div class="title-loader" ng-if="!calls"><i class="fa fa-refresh fa-spin"></i></div></h1>
 	<div class="box-content2 box-content-table">
 		<table class="tb-zebra">
 			<tr>
-				<th>Support&nbsp;ID</th>
+				<th>ID</th>
 				<th>From</th>
 				<th>Status</th>
 				<th>Start</th>
