added basic order and staff view

--- a/include/views/default/cockpit2/frontend/orders/orders-list.phtml
+++ b/include/views/default/cockpit2/frontend/orders/orders-list.phtml
@@ -39,7 +39,7 @@
 					<a href="/community/{{order._community_name}}">{{order._community_name}}</a>
 				</td>
 				<td><a href="/customer/{{id_user}}">{{order.name}}</a></td>
-				<td><a href="/driver/{{order.status.driver.id_admin}}">{{order.status.driver.name}}</a></td>
+				<td><a href="/staff/{{order.status.driver.id_admin}}">{{order.status.driver.name}}</a></td>
 				<td>${{order.final_price_plus_delivery_markup}}</td>
 				<td>
 					<b>{{order.status.status}}</b><br>
