--- a/include/views/default/cockpit2/frontend/tickets/tickets-ticket.phtml
+++ b/include/views/default/cockpit2/frontend/tickets/tickets-ticket.phtml
@@ -48,7 +48,7 @@
 		</div>
 
 		<div ng-if="ticket.order.driver.id_admin" class="support-box-wrap">
-			<h1>Driver <a href="/driver/{{ticket.driver.id_admin}}">#{{ticket.order.driver.id_admin}}</a></h1>
+			<h1>Driver <a href="/staff/{{ticket.driver.id_admin}}">#{{ticket.order.driver.id_admin}}</a></h1>
 			<div class="box-content-color">
 				<div class="field-container">
 					<div class="field-row">
