--- a/include/views/default/cockpit2/bundle/js.phtml
+++ b/include/views/default/cockpit2/bundle/js.phtml
@@ -18,6 +18,7 @@
 <script src="/assets/cockpit/js/moment-timezone.min.js"></script>
 <script src="/assets/cockpit/js/angular-moment.min.js"></script>
 <script src="/assets/cockpit/js/socket.min.js"></script>
+<script src="/assets/cockpit/js/angular-hotkeys.min.js"></script>
 
 <script src="/assets/js/snap.js"></script>
 <script src="/assets/js/date.js"></script>
