--- a/include/views/default/cockpit2/layout/html.body.phtml
+++ b/include/views/default/cockpit2/layout/html.body.phtml
@@ -265,7 +265,7 @@
 								<div class="badge" ng-show="supportMessages.count && supportMessages.count != '0'">{{supportMessages.count}}</div>
 								<i class="fa fa-comment"></i>
 							</div>
-							<div class="notification notification-support notification-support-desktop" ng-click="supportToggle()">
+							<div class="notification notification-support notification-support-desktop" ng-click="supportToggle()" hotkey="{s: supportToggle}">
 								<div class="badge" ng-show="supportMessages.count && supportMessages.count != '0'">{{supportMessages.count}}</div>
 								<i class="fa fa-comment"></i>
 							</div>
