lots of cockpit rearangements

--- a/include/views/default/cockpit2/bundle/js.phtml
+++ b/include/views/default/cockpit2/bundle/js.phtml
@@ -46,12 +46,13 @@
 <script src="/assets/cockpit/js/controllers.drivers.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/controllers.staff.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/controllers.settlement.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/controllers.restaurants.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/cockpit/js/controllers.restaurant.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/controllers.customer.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/controllers.maps.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/controllers.tickets.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/cockpit/js/controllers.support.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/controllers.deploy.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/controllers.order.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/cockpit/js/controllers.config.js?v=<?=Cana_Util::gitVersion()?>"></script>
 
 <!-- AngularJS Filters -->
 <script src="/assets/js/filters.js?v=<?=Cana_Util::gitVersion()?>"></script>
@@ -78,7 +79,7 @@
 <script src="/assets/cockpit/js/service.restaurant.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/service.location.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/service.customer.js?v=<?=Cana_Util::gitVersion()?>"></script>
-<script src="/assets/cockpit/js/service.tickets.js?v=<?=Cana_Util::gitVersion()?>"></script>
+<script src="/assets/cockpit/js/service.support.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/service.heartbeat.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/service.push.js?v=<?=Cana_Util::gitVersion()?>"></script>
 <script src="/assets/cockpit/js/service.notification.js?v=<?=Cana_Util::gitVersion()?>"></script>
