--- a/include/views/default/cockpit2/frontend/config/config-rewards.phtml
+++ b/include/views/default/cockpit2/frontend/config/config-rewards.phtml
@@ -2,7 +2,7 @@
 
 <div class="content-padding" ng-show="ready">
 
-	<h1 class="title left"><i class="fa fa-smile-o"></i><span>Customer Reward Settings</span></h1>
+	<h1 class="subltitle"><i class="fa fa-angellist"></i>&nbsp;&nbsp;<span>Customer Rewards</span></h1>
 
 	<div class="divider"></div>
 
