--- a/include/views/default/cockpit2/frontend/tickets/tickets-ticket.phtml
+++ b/include/views/default/cockpit2/frontend/tickets/tickets-ticket.phtml
@@ -48,7 +48,7 @@
 		</div>
 
 		<div ng-if="ticket.order.driver.id_admin" class="support-box-wrap">
-			<h1>Driver <a href="/staff/{{ticket.driver.id_admin}}">#{{ticket.order.driver.id_admin}}</a></h1>
+			<h1>Driver <a href="/staff/{{ticket.order.driver.id_admin}}">#{{ticket.order.driver.id_admin}}</a></h1>
 			<div class="box-content-color">
 				<div class="field-container">
 					<div class="field-row">
@@ -92,10 +92,8 @@
 					<div class="field-row">
 						<div class="field-key">Status</div>
 						<div class="field-value">
-							<span ng-if="ticket.order.lastStatus['delivery-status'].delivered">Delivered @ {{ticket.order.lastStatus['delivery-status'].delivered.timestamp*1000 | date: 'h:mm a'}} (<span am-time-ago="ticket.order.lastStatus['delivery-status'].delivered.timestamp*1000"></span>)</span>
-							<span ng-if="ticket.order.lastStatus['delivery-status'].pickedup && !ticket.order.lastStatus['delivery-status'].delivered">Picked up @ {{ticket.order.lastStatus['delivery-status'].pickedup.timestamp*1000 | date: 'h:mm a'}} (<span am-time-ago="ticket.order.lastStatus['delivery-status'].pickedup.timestamp*1000"></span>)</span>
-							<span ng-if="ticket.order.lastStatus['delivery-status'].accepted && !ticket.order.lastStatus['delivery-status'].pickedup && !ticket.order.lastStatus['delivery-status'].delivered">Accepted @ {{ticket.order.lastStatus['delivery-status'].accepted.timestamp*1000 | date: 'h:mm a'}} (<span am-time-ago="ticket.order.lastStatus['delivery-status'].accepted.timestamp*1000"></span>)</span>
-							<span ng-if="!ticket.order.lastStatus['delivery-status'].delivered && !ticket.order.lastStatus['delivery-status'].pickedup && !ticket.order.lastStatus['delivery-status'].accepted">Placed</span>
+							<span ng-if="order.status"><b>{{order.status.status}}</b> <span am-time-ago="order.status.timestamp*1000"></span></span>
+							<span ng-if="!order.status">{{order.confirmed ? 'Confirmed' : 'Placed'}}</span>
 						</div>
 					</div>
 				</div>
