--- a/include/views/default/cockpit2/layout/html.body.phtml
+++ b/include/views/default/cockpit2/layout/html.body.phtml
@@ -55,6 +55,15 @@
 					</tr>
 				</table>
 			</a>
+			
+			<a href="/restaurants" class="menu-link" ng-if="account.user.permissions.GLOBAL && menu.toggle=='admin'" ng-class="{'nav-active': (navigation.page == 'restaurants' || navigation.page == 'restaurant')}">
+				<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
+					<tr>
+						<td class="side-menu-icon"><i class="fa fa-coffee"></i></td>
+						<td class="side-menu-label">Restaurants</a></td>
+					</tr>
+				</table>
+			</a>
 
 			<a href="/drivers/shifts" class="menu-link" ng-if="account.isDriver && menu.toggle=='driver'" ng-class="{'nav-active': (navigation.page == 'drivers-shifts')}">
 				<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
@@ -84,7 +93,7 @@
 			</a>
 
 
-			<a href="/drivers/summary" class="menu-link" ng-if="account.user.permissions.GLOBAL || account.isDriver" ng-class="{'nav-active': (navigation.page == 'drivers-summary')}">
+			<a href="/drivers/summary" class="menu-link" ng-if="(account.user.permissions.GLOBAL || account.isDriver) && menu.toggle=='driver'" ng-class="{'nav-active': (navigation.page == 'drivers-summary')}">
 				<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 					<tr>
 						<td class="side-menu-icon"><i class="fa fa-money"></i></td>
@@ -122,11 +131,11 @@
 				</table>
 			</a>
 
-			<a href="/customer" class="menu-link" ng-if="account.user.permissions.GLOBAL && menu.toggle=='admin'" ng-class="{'nav-active': (navigation.page == 'customer')}">
+			<a href="/customers" class="menu-link" ng-if="account.user.permissions.GLOBAL && menu.toggle=='admin'" ng-class="{'nav-active': (navigation.page == 'customers' || navigation.page == 'customer')}">
 				<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
 					<tr>
 						<td class="side-menu-icon"><i class="fa fa-smile-o"></i></td>
-						<td class="side-menu-label">Customer</a></td>
+						<td class="side-menu-label">Customers</a></td>
 					</tr>
 				</table>
 			</a>
@@ -145,6 +154,15 @@
 					<tr>
 						<td class="side-menu-icon"><i class="fa fa-code"></i></td>
 						<td class="side-menu-label">Code Deployment</a></td>
+					</tr>
+				</table>
+			</a>
+			
+			<a href="/config" class="menu-link" ng-if="account.user.permissions.GLOBAL && menu.toggle=='admin'" ng-class="{'nav-active': (navigation.page == 'config' || navigation.page == 'config-rewards')}">
+				<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
+					<tr>
+						<td class="side-menu-icon"><i class="fa fa-cog"></i></td>
+						<td class="side-menu-label">Config</a></td>
 					</tr>
 				</table>
 			</a>
